--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "dbt_exploration"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 dbt-bigquery = "^1.4.3"
+sqlfmt = "^0.0.3"
 
 
 [build-system]
